--- a/css/style.css
+++ b/css/style.css
@@ -74,11 +74,14 @@ a{
 }
 .intro{
       width: 90%;
-      height: 300px;
+      height: 200px;
       border-radius: 12px;
       margin-bottom: 30px;
       padding: var(--espacio-dentro);
       background-color: #102E50;
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
 }
 .intro h1{
       font-size: var(--titulo1);
@@ -170,7 +173,23 @@ a{
       color: var(--color-letra);
       cursor: pointer;
 }
+.reportes{
+      width: 80%;
 
+      display: flex;
+      flex-direction: column;
+      gap: 25px;
+}
+.reportes article{
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      border-bottom: 1px solid var(--color-letra);
+}
+.reportes article p{
+      margin-bottom: 15px;
+      line-height: 35px;
+}
 
 
 
